# core-lib

./: Cargo.toml  README.md
src/: lib.rs
src/client/: error.rs  mod.rs  state.rs
src/drawing/: _template.rs  atom.rs  bubbles.rs  cascade.rs  custom.rs  dunes.rs  entropy.rs  islands.rs  lines.rs  links.rs  mod.rs  scribble.rs  shades.rs  vinyl.rs  waves.rs
src/drawing/util/: audio.rs  dijkstra.rs  geometry.rs  heightmap.rs  mod.rs  stipple.rs  stipple_structures.rs
src/hardware/: math.rs  mod.rs
src/instruction/: error.rs  mod.rs
src/plugin/: error.rs  interface.rs  mod.rs
src/preview/: belts.rs  canvas.rs  mod.rs
