[package]
name = "bbcore"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
getset = "0.1.5"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.25.0"
noise = "0.9.0"
once_cell = "1.21.3"
ordered-float = "5.0.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full", "net"] }
